[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Cultivo.gd" type="Script" id=1]
[ext_resource path="res://Scene/Hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=3]
[ext_resource path="res://Scene/Buraco.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/√Årvore.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pedra.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Pedras.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Mato.png" type="Texture" id=8]

[node name="Cultivo" type="Node2D"]
script = ExtResource( 1 )

[node name="Gui" parent="." instance=ExtResource( 2 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 510, 300 )
texture = ExtResource( 3 )

[node name="Buracos" type="Node2D" parent="."]
editor/display_folded = true

[node name="Area2D" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 398.475, 110.798 )

[node name="Area2D6" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 534.856, 109.711 )

[node name="Area2D5" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 675.173, 110.1 )

[node name="Area2D4" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 806.581, 111.734 )

[node name="Area2D3" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 293.986, 255.837 )

[node name="Area2D2" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 464.53, 254.98 )

[node name="Area2D9" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 634.156, 252.344 )

[node name="Area2D8" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 827.375, 252.414 )

[node name="Area2D7" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 184.527, 446.088 )

[node name="Area2D13" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 304.078, 447.125 )

[node name="Area2D12" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 446.409, 445.655 )

[node name="Area2D11" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 591.495, 446.389 )

[node name="Area2D10" parent="Buracos" instance=ExtResource( 4 )]
position = Vector2( 882.995, 445.439 )

[node name="Arvores" type="Node2D" parent="."]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="Arvores"]
position = Vector2( 147, 160 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Arvores"]
position = Vector2( 697, 350 )
texture = ExtResource( 5 )

[node name="Sprite3" type="Sprite" parent="Arvores"]
position = Vector2( 60, 430 )
texture = ExtResource( 5 )

[node name="Pedras" type="Node2D" parent="."]
editor/display_folded = true

[node name="Pedra" type="Sprite" parent="Pedras"]
position = Vector2( 140, 290 )
texture = ExtResource( 6 )

[node name="Pedra2" type="Sprite" parent="Pedras"]
position = Vector2( 950, 110 )
texture = ExtResource( 6 )

[node name="Pedras2" type="Sprite" parent="Pedras"]
position = Vector2( 690, 550 )
texture = ExtResource( 7 )

[node name="Pedras" type="Sprite" parent="Pedras"]
position = Vector2( 102, 570 )
texture = ExtResource( 7 )

[node name="Pedra3" type="Sprite" parent="Pedras"]
position = Vector2( 960, 560 )
texture = ExtResource( 6 )

[node name="Mato" type="Node2D" parent="."]
editor/display_folded = true

[node name="Mato" type="Sprite" parent="Mato"]
position = Vector2( 102, 470 )
texture = ExtResource( 8 )

[node name="Mato3" type="Sprite" parent="Mato"]
position = Vector2( 15, 467 )
texture = ExtResource( 8 )

[node name="Mato2" type="Sprite" parent="Mato"]
position = Vector2( 40, 493 )
texture = ExtResource( 8 )

[node name="Mato4" type="Sprite" parent="Mato"]
position = Vector2( 105, 510 )
texture = ExtResource( 8 )

[node name="Mato12" type="Sprite" parent="Mato"]
position = Vector2( 80, 550 )
texture = ExtResource( 8 )

[node name="Mato13" type="Sprite" parent="Mato"]
position = Vector2( 180, 568.5 )
texture = ExtResource( 8 )

[node name="Mato14" type="Sprite" parent="Mato"]
position = Vector2( 108.5, 210 )
texture = ExtResource( 8 )

[node name="Mato15" type="Sprite" parent="Mato"]
position = Vector2( 200, 224.5 )
texture = ExtResource( 8 )

[node name="Mato16" type="Sprite" parent="Mato"]
position = Vector2( 910, 80 )
texture = ExtResource( 8 )

[node name="Mato17" type="Sprite" parent="Mato"]
position = Vector2( 991.5, 94.5 )
texture = ExtResource( 8 )

[node name="Mato18" type="Sprite" parent="Mato"]
position = Vector2( 910, 140 )
texture = ExtResource( 8 )

[node name="Mato19" type="Sprite" parent="Mato"]
position = Vector2( 947, 150 )
texture = ExtResource( 8 )

[node name="Mato5" type="Sprite" parent="Mato"]
position = Vector2( 742, 390 )
texture = ExtResource( 8 )

[node name="Mato6" type="Sprite" parent="Mato"]
position = Vector2( 730, 430 )
texture = ExtResource( 8 )

[node name="Mato7" type="Sprite" parent="Mato"]
position = Vector2( 652, 390 )
texture = ExtResource( 8 )

[node name="Mato8" type="Sprite" parent="Mato"]
position = Vector2( 700, 550 )
texture = ExtResource( 8 )

[node name="Mato9" type="Sprite" parent="Mato"]
position = Vector2( 597, 554 )
texture = ExtResource( 8 )

[node name="Mato10" type="Sprite" parent="Mato"]
position = Vector2( 660, 570 )
texture = ExtResource( 8 )

[node name="Mato11" type="Sprite" parent="Mato"]
position = Vector2( 910, 560 )
texture = ExtResource( 8 )
[connection signal="beringelaClick" from="Gui" to="." method="_on_Gui_beringelaClick"]
[connection signal="hortalicaClick" from="Gui" to="." method="_on_Gui_hortalicaClick"]
[connection signal="milhoClick" from="Gui" to="." method="_on_Gui_milhoClick"]
[connection signal="pimentaoClick" from="Gui" to="." method="_on_Gui_pimentaoClick"]
[connection signal="tomateClick" from="Gui" to="." method="_on_Gui_tomateClick"]
[connection signal="buracoClick" from="Buracos/Area2D" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D6" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D5" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D4" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D3" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D2" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D9" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D8" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D7" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D13" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D12" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D11" to="." method="_on_Area2D_buracoClick"]
[connection signal="buracoClick" from="Buracos/Area2D10" to="." method="_on_Area2D_buracoClick"]
